--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<a href="https://vpolyakov.github.io/%D0%A4%D0%B8%D0%BA%D1%81%20%D0%BF%D1%80%D0%B0%D0%B9%D1%81.html">Карта магазинов Фикс прайс</a>
+<a href="htttps://client_per-lom_marker_map.html">Карта клиентов ломбарда</a>
+<a href="https://vpolyakov.github.io/Saratov_citizens_map.html">Карта жителей саратова</a>
+
 </body>
 </html>
