--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <h3><a href="https://vpolyakov.github.io/%D0%A4%D0%B8%D0%BA%D1%81%20%D0%BF%D1%80%D0%B0%D0%B9%D1%81.html">Карта магазинов Фикс прайс</a></h3>
-<h3><a href="https://client_per-lom_marker_map.html">Карта клиентов ломбарда</a></h3>
+<h3><a href="https://vpolyakov.github.io/client_per-lom_marker_map.html">Карта клиентов ломбарда</a></h3>
 <h3><a href="https://vpolyakov.github.io/Saratov_citizens_map.html">Карта жителей саратова</a></h3>
 
 </body>
