--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
 <h3><a href="https://vpolyakov.github.io/%D0%A4%D0%B8%D0%BA%D1%81%20%D0%BF%D1%80%D0%B0%D0%B9%D1%81.html">Карта магазинов Фикс прайс</a></h3>
 <h3><a href="https://vpolyakov.github.io/client_per-lom_marker_map.html">Карта клиентов ломбарда</a></h3>
-<h3><a href="https://vpolyakov.github.io/Saratov_citizens_map.html">Карта жителей саратова</a></h3>
+<h3><a href="https://vpolyakov.github.io/Saratov_citizens_map.html">Карта жителей Саратова</a></h3>
 <h3><a href="https://vpolyakov.github.io/%D0%90%D0%BD%D0%B0%D0%BB%D0%B8%D0%B7%20%D0%BA%D1%80%D0%B5%D0%B4%D0%B8%D1%82%D0%BE%D0%B2%20%D0%B8%20%D0%BA%D0%BB%D0%B8%D0%B5%D0%BD%D1%82%D0%BE%D0%B2.slides.html">Анализ кредитов и клиентов</a></h3>
+<a href="https://vpolyakov.github.io/credits_statistics_appendix.zip">Приложение к Анализу кредитов и клиентов - Excel таблицы (запакованы в zip)</a>
+
 <h3><a href="https://vpolyakov.github.io/%D0%90%D0%BD%D0%B0%D0%BB%D0%B8%D0%B7%20%D0%BA%D1%80%D1%83%D0%BF%D0%BD%D1%8B%D1%85%20%D0%BA%D1%80%D0%B5%D0%B4%D0%B8%D1%82%D0%BE%D0%B2.slides.html">Анализ крупных кредитов</a></h3>
 <h3><a href="https://vpolyakov.github.io/%D0%90%D0%BD%D0%B0%D0%BB%D0%B8%D0%B7%20%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D1%8B%20%D0%BA%D0%BB%D0%B8%D0%B5%D0%BD%D1%82%D0%B0%20%D0%BF%D0%BE%20%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%B8.slides.html">Анализ пользы клиента по времени</a></h3>
 <h3><a href="https://vpolyakov.github.io/%D0%A1%D1%82%D0%B0%D1%82%D0%B8%D1%81%D1%82%D0%B8%D0%BA%D0%B0%20%D0%BF%D0%BE%20%D0%BA%D1%80%D1%83%D0%BF%D0%BD%D1%8B%D0%BC%20%D0%BA%D1%80%D0%B5%D0%B4%D0%B8%D1%82%D0%B0%D0%BC.html">Статистика по крупным кредитам</a></h3>
